CWrapper/Window/Window.h

typedef struct LunaWindowHandle
{
    luna_handle_t object;
    void* iwindow;
} LunaWindowHandle;
typedef void* luna_display_t;
typedef struct LunaWindowVideoMode
{
    uint32_t width;
    uint32_t height;
    uint32_t bits_per_pixel;
    uint32_t refresh_rate;
} LunaWindowVideoMode;
typedef struct LunaWindowPointI
{
    int32_t x;
    int32_t y;
} LunaWindowPointI;
typedef struct LunaWindowRectI
{
    int32_t offset_x;
    int32_t offset_y;
    int32_t width;
    int32_t height;
} LunaWindowRectI;
typedef struct LunaWindowFileDialogFilter
{
    const char* name;
    const char** extensions;
    uint64_t extension_count;
} LunaWindowFileDialogFilter;
typedef struct LunaWindowStringList
{
    const char** items;
    uint64_t count;
} LunaWindowStringList;
typedef void (*LunaWindowEventHandler)(luna_handle_t event_object, void* userdata);
LUNA_WINDOW_C_API luna_errcode_t luna_window_init_module(const char* app_name);
LUNA_WINDOW_C_API luna_errcode_t luna_window_new(
    const char* title,
    int32_t x,
    int32_t y,
    uint32_t width,
    uint32_t height,
    uint32_t style_flags,
    uint32_t creation_flags,
    LunaWindowHandle* out_window);
LUNA_WINDOW_C_API void luna_window_poll_events(int32_t wait_events);
LUNA_WINDOW_C_API void luna_window_set_event_handler(LunaWindowEventHandler event_handler, void* userdata);
LUNA_WINDOW_C_API void luna_window_get_event_handler(LunaWindowEventHandler* out_event_handler, void** out_userdata);
LUNA_WINDOW_C_API luna_display_t luna_window_display_get_primary(void);
LUNA_WINDOW_C_API void luna_window_display_get_all(luna_display_t* out_displays, uint64_t capacity, uint64_t* out_count);
LUNA_WINDOW_C_API luna_errcode_t luna_window_display_get_supported_video_modes(luna_display_t display, LunaWindowVideoMode* out_modes, uint64_t capacity, uint64_t* out_count);
LUNA_WINDOW_C_API luna_errcode_t luna_window_display_get_video_mode(luna_display_t display, LunaWindowVideoMode* out_mode);
LUNA_WINDOW_C_API luna_errcode_t luna_window_display_get_position(luna_display_t display, LunaWindowPointI* out_position);
LUNA_WINDOW_C_API luna_errcode_t luna_window_display_get_working_area(luna_display_t display, LunaWindowRectI* out_rect);
LUNA_WINDOW_C_API luna_errcode_t luna_window_display_get_name(luna_display_t display, const char** out_name);
LUNA_WINDOW_C_API void luna_window_free_string(const char* text);
LUNA_WINDOW_C_API void luna_window_free_string_list(const char** texts, uint64_t count);
LUNA_WINDOW_C_API luna_errcode_t luna_window_clipboard_get_text(const char** out_text);
LUNA_WINDOW_C_API luna_errcode_t luna_window_clipboard_set_text(const char* text);
LUNA_WINDOW_C_API luna_errcode_t luna_window_message_box(
    const char* text,
    const char* caption,
    uint32_t type,
    uint32_t icon,
    uint32_t* out_button);
LUNA_WINDOW_C_API luna_errcode_t luna_window_open_file_dialog(
    const char* title,
    const LunaWindowFileDialogFilter* filters,
    uint64_t filter_count,
    const char* initial_dir,
    uint32_t flags,
    LunaWindowStringList* out_paths);
LUNA_WINDOW_C_API luna_errcode_t luna_window_save_file_dialog(
    const char* title,
    const LunaWindowFileDialogFilter* filters,
    uint64_t filter_count,
    const char* initial_file_path,
    uint32_t flags,
    const char** out_path);
LUNA_WINDOW_C_API luna_errcode_t luna_window_open_dir_dialog(
    const char* title,
    const char* initial_dir,
    const char** out_path);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_request_close_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_closed_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_input_focus_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_lose_input_focus_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_show_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_hide_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_resize_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_framebuffer_resize_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_move_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_dpi_scale_changed_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_key_down_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_key_up_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_input_text_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_mouse_enter_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_mouse_leave_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_mouse_move_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_mouse_down_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_mouse_up_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_scroll_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_touch_down_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_touch_move_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_touch_up_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_window_drop_files_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_application_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_application_did_enter_foreground_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_application_will_enter_foreground_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_application_did_enter_background_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_application_will_enter_background_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_application_will_terminate_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_application_did_receive_memory_warning_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_screen_keyboard_shown_event_type(void);
LUNA_WINDOW_C_API luna_type_t luna_window_get_screen_keyboard_hidden_event_type(void);