Managed/Window/Internal/Generated/WindowNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.Window.Internal;

internal static partial class WindowNativeGenerated
{
    [DllImport("LunaWindowC", EntryPoint = "luna_window_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule([MarshalAs(UnmanagedType.LPUTF8Str)] string appName);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_new", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr New([MarshalAs(UnmanagedType.LPUTF8Str)] string title, int x, int y, uint width, uint height, uint styleFlags, uint creationFlags, out NativeWindowHandle outWindow);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_poll_events", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void PollEvents(int waitEvents);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_set_event_handler", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void SetEventHandler(IntPtr eventHandler, IntPtr userdata);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_event_handler", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void GetEventHandler(out IntPtr outEventHandler, out IntPtr outUserdata);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_display_get_primary", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr DisplayGetPrimary();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_display_get_all", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void DisplayGetAll(IntPtr outDisplays, ulong capacity, out ulong outCount);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_display_get_supported_video_modes", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr DisplayGetSupportedVideoModes(IntPtr display, IntPtr outModes, ulong capacity, out ulong outCount);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_display_get_video_mode", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr DisplayGetVideoMode(IntPtr display, out global::Luna.Window.DisplayVideoMode outMode);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_display_get_position", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr DisplayGetPosition(IntPtr display, out global::Luna.Window.Point2I outPosition);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_display_get_working_area", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr DisplayGetWorkingArea(IntPtr display, out global::Luna.Window.RectI outRect);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_display_get_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr DisplayGetName(IntPtr display, out IntPtr outName);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_free_string", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeString(IntPtr text);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_free_string_list", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeStringList(IntPtr texts, ulong count);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_clipboard_get_text", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ClipboardGetText(out IntPtr outText);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_clipboard_set_text", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ClipboardSetText([MarshalAs(UnmanagedType.LPUTF8Str)] string text);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_message_box", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr MessageBox([MarshalAs(UnmanagedType.LPUTF8Str)] string text, [MarshalAs(UnmanagedType.LPUTF8Str)] string caption, uint type, uint icon, out uint outButton);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_open_file_dialog", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr OpenFileDialog([MarshalAs(UnmanagedType.LPUTF8Str)] string title, IntPtr filters, ulong filterCount, [MarshalAs(UnmanagedType.LPUTF8Str)] string initialDir, uint flags, out NativeStringList outPaths);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_save_file_dialog", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SaveFileDialog([MarshalAs(UnmanagedType.LPUTF8Str)] string title, IntPtr filters, ulong filterCount, [MarshalAs(UnmanagedType.LPUTF8Str)] string initialFilePath, uint flags, out IntPtr outPath);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_open_dir_dialog", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr OpenDirDialog([MarshalAs(UnmanagedType.LPUTF8Str)] string title, [MarshalAs(UnmanagedType.LPUTF8Str)] string initialDir, out IntPtr outPath);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_request_close_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowRequestCloseEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_closed_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowClosedEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_input_focus_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowInputFocusEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_lose_input_focus_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowLoseInputFocusEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_show_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowShowEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_hide_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowHideEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_resize_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowResizeEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_framebuffer_resize_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowFramebufferResizeEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_move_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowMoveEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_dpi_scale_changed_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowDpiScaleChangedEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_key_down_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowKeyDownEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_key_up_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowKeyUpEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_input_text_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowInputTextEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_mouse_enter_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowMouseEnterEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_mouse_leave_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowMouseLeaveEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_mouse_move_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowMouseMoveEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_mouse_down_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowMouseDownEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_mouse_up_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowMouseUpEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_scroll_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowScrollEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_touch_down_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowTouchDownEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_touch_move_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowTouchMoveEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_touch_up_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowTouchUpEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_window_drop_files_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetWindowDropFilesEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_application_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetApplicationEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_application_did_enter_foreground_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetApplicationDidEnterForegroundEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_application_will_enter_foreground_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetApplicationWillEnterForegroundEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_application_did_enter_background_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetApplicationDidEnterBackgroundEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_application_will_enter_background_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetApplicationWillEnterBackgroundEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_application_will_terminate_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetApplicationWillTerminateEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_application_did_receive_memory_warning_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetApplicationDidReceiveMemoryWarningEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_screen_keyboard_shown_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetScreenKeyboardShownEventType();

    [DllImport("LunaWindowC", EntryPoint = "luna_window_get_screen_keyboard_hidden_event_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetScreenKeyboardHiddenEventType();
